--- a/EMS/src/main/webapp/WEB-INF/web.xml
+++ b/EMS/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,34 @@
   <url-pattern>/reg</url-pattern>
   </servlet-mapping>
   
+  
+  
+  <servlet>
+  <servlet-name>login</servlet-name>
+  <servlet-class>edu.training.LoginServlet</servlet-class>
+  <init-param>
+  <param-name>dClass</param-name>
+  <param-value>com.mysql.jdbc.Driver</param-value>
+  </init-param>
+  <init-param>
+  <param-name>url</param-name>
+  <param-value>jdbc:mysql://localhost:3306/Prodapt</param-value>
+  </init-param>
+  <init-param>
+  <param-name>userName</param-name>
+  <param-value>root</param-value>
+  </init-param>
+  <init-param>
+  <param-name>password</param-name>
+  <param-value>Reset@123</param-value>
+  </init-param>
+  </servlet>  
+  <servlet-mapping>
+  <servlet-name>login</servlet-name>
+  <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
